--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </aside>
         <section id="span">
           <h2>Mi proyecto de vida</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe placeat quia fugit molestias dolores, odit odio quam minima mollitia sunt culpa aspernatur laborum cupiditate commodi sapiente tenetur minus aperiam perspiciatis?</p>
+          <p>Graduarme como profesional en programación de software y desempeñarme en actividades de investigación y desarrollo tecnológico</p>
         </section>
       </div>
     </main>
