--- a/cifrado.html
+++ b/cifrado.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Cifrado Cesar</title>
     <link rel="shortcut icon" href="imagenes/logo.jpg" type="image/x-icon" />
     <link rel="stylesheet" href="styles.css" />
     
@@ -65,7 +65,7 @@
     </main>
 
     <footer>
-      <p>&copy Copy Right 2023 | Unicoc</p>
+      <p>&copy Copy Right 2023 | UNICOC - JPMT</p>
     </footer>
     <script src="main.js"></script>
   </body>
