--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Contacto</title>
     <link rel="shortcut icon" href="imagenes/logo.jpg" type="image/x-icon" />
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -47,7 +47,7 @@
     </main>
 
     <footer>
-      <p>&copy Copy Right 2023 | Unicoc</p>
+      <p>&copy Copy Right 2023 | Unicoc -JPMT</p>
     </footer>
   </body>
 </html>
