--- a/index.html
+++ b/index.html
@@ -31,39 +31,44 @@
     <main>
       <div id="caja">
         <section>
-          <h2>Mi perfil Profesional</h2>
-          <p>Como profesiona en programacion de sofwtare y diseñador web, poseo los conocimientos y habilidades para desempeñarme</p>
-          <ul>
-            <li>Analista de sistemas</li>
-            <li>Desarrollador de software</li>
-            <li>Administrador de bases de datos</li>
-          </ul>
+          <div>
+            <h2>Mi perfil Profesional</h2>
+            <p>Como profesiona en programacion de sofwtare y diseñador web, poseo los conocimientos y habilidades para desempeñarme</p>
+            <ul>
+              <li>Analista de sistemas</li>
+              <li>Desarrollador de software</li>
+              <li>Administrador de bases de datos</li>
+            </ul>
+          </div>
         </section>
         <aside>
           <h2>Redes sociales</h2>
 
           <ul class="social-list">
             <li>
-              <a href="https://youtube.com" target="_blank"><img class="social-item" src="imagenes/facebook.png" /></a>
+              <a href="https://www.facebook.com/" target="_blank"><img class="social-item" src="imagenes/facebook.png" /></a>
             </li>
             <li>
               <a href="https://youtube.com" target="_blank"><img class="social-item" src="imagenes/youtube.svg" alt="" class="youtube" /></a>
             </li>
             <li>
-              <a href="https://youtube.com" target="_blank"><img class="social-item" src="imagenes/instagram.png" alt="" /></a>
+              <a href="https://www.instagram.com/" target="_blank"><img class="social-item" src="imagenes/instagram.png" alt="" /></a>
             </li>
           </ul>
           <div></div>
         </aside>
         <section id="span">
-          <h2>Mi proyecto de vida</h2>
-          <p>Graduarme como profesional en programación de software y desempeñarme en actividades de investigación y desarrollo tecnológico</p>
+          <img src="imagenes/hombrepc.png" >
+          <div>
+            <h2>Mi proyecto de vida</h2>
+            <p>Graduarme como profesional en programación de software y desempeñarme en actividades de investigación y desarrollo tecnológico</p>
+          </div>
         </section>
       </div>
     </main>
 
     <footer>
-      <p>&copy Copy Right 2023 | Unicoc</p>
+      <p>&copy Copy Right 2023 | UNICOC - JPMT</p>
     </footer>
   </body>
 </html>
