--- a/pagina2/glosario.html
+++ b/pagina2/glosario.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Pagina WEB de mi glosario personal, correspondiente a la asignatura de Sistemas Operativos, ingeniería de sistemas, UNICOC">
   <link rel="icon" href="imagenes/profile.png" type="image/png" sizes="20x20">
   <meta name="keywords" content="Glosario, Sistemas Operativos, Microprocesadores, Ingeniería, Sistemas, Unicoc">
-  <title>Mi Paginita Web</title>
+  <title>Glosario</title>
 
   <link rel="stylesheet" href="ccs/styles.css">
 </head>
@@ -54,7 +54,7 @@
 
 </main>
 <footer>
-  <p><a href="https://www.unicoc.edu.co/Bogota/Default.aspx">&copy UNICOC </a> | Todos los derechos reservados | 2023</p>
+  <p><a href="https://www.unicoc.edu.co/Bogota/Default.aspx" target="_blank">&copy UNICOC - JPMT </a> | Todos los derechos reservados | 2023</p>
 </footer>
 
 </div>
