--- a/pagina2/glosario/sistemas.html
+++ b/pagina2/glosario/sistemas.html
@@ -69,9 +69,9 @@
 
       </main>
     </div>
-  <footer>
-    <p><a href="https://www.unicoc.edu.co/Bogota/Default.aspx">&copy UNICOC </a> | Todos los derechos reservados | 2023</p>
-  </footer>
+<footer>
+  <p><a href="https://www.unicoc.edu.co/Bogota/Default.aspx" target="_blank">&copy UNICOC - JPMT </a> | Todos los derechos reservados | 2023</p>
+</footer>
  
 
 </body>
