--- a/contacto.html
+++ b/contacto.html
@@ -22,7 +22,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Incio</a></li>
-          <li><a target="_blank" href="pagina2/glosario.html">Glosario</a></li>
+          <li><a href="pagina2/glosario.html">Glosario</a></li>
           <li><a href="contacto.html">Contacto</a></li>
           <li><a href="cifrado.html">Cifrado Cesar</a></li>
         </ul>
